feat: Change Inspector digest to be stack-based (#40)
Changes the summary of AWS Inspector warnings posted to Slack to focus
on stacks/services, rather than individual vulnerabilities and lambdas.
This should make it more obvious which services need to be patched.

It now contains two sections:

1. A list of stacks (top 10, ranked by active vulnerabilities)
2. A shorter list of the most common vulnerabilities (top 5, ranked by
new vulnerabilities in the last week)

## Example output

```
  ▎ :shield: Inspector findings digest: 8 new vulnerabilities                                                                                                                                                                                                                                                                                      
  ▎                                                                                                                                                                                                                                                                                                                                                
  ▎ Stacks with active HIGH/CRITICAL dependency vulnerabilities:                                                                                                                                                                                                                                                                                   
  ▎ • nva-publication-api: 1 CRITICAL, 1 HIGH                                                                                                                                                                                                                                                                                                      
  ▎ • nva-courses-api: 5 HIGH                                                                                                                      